# quicksilver

./: Orderbook.hs  Quicksilver.cabal
src/: Main.hs
src/Quicksilver/: Main.hs  Order.hs  Orderbook.hs
test/: Tests.hs
test/Quicksilver/: OrderbookSpec.hs
